<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.RegisterFragment"
    tools:ignore="ExtraText">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/double_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/info_layout"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="110dp"
            android:visibility="invisible"
            android:nextFocusDown="@id/signup_surname"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/message_border"
            android:orientation="horizontal"
            >
            <ImageView
                android:src="@drawable/ic_error"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/info_check"
                android:layout_marginStart="10dp"
                android:text="Üye olmak için sözleşmeleri onaylamanız gerekmektedir."
                android:textStyle="bold"
                android:textColor="@color/custom_checkbox_color"
                android:textSize="14sp"
                android:layout_marginEnd="5dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/info_layout"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@id/signup_mail"
            android:hint="Ad"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/signup_surname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            tools:ignore="MissingConstraints" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_surname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            app:layout_constraintHorizontal_weight="1"
            android:hint="Soyad"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:layout_constraintLeft_toRightOf="@+id/signup_name"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/signup_name"
            app:layout_constraintBottom_toBottomOf="@id/signup_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            tools:ignore="MissingConstraints" >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_surnameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_mail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="40dp"
            android:hint="E posta"
            app:boxBackgroundMode="outline"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_name"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_mailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/signup_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="40dp"
            android:hint="Şifre"
            app:boxBackgroundMode="outline"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_mail"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/signup_passwordET"
                android:layout_width="match_parent"
                android:lines="1"
                app:errorEnabled="true"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/signup_recaptchaText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="24dp"
            app:boxBackgroundMode="outline"
            app:startIconCheckable="true"
            app:layout_constraintTop_toBottomOf="@id/signup_password"
            >
            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/signup_recaptcha"
                android:layout_width="334dp"
                android:layout_height="83dp"
                android:paddingRight="20dp"
                android:drawableEnd="@drawable/rsz"
                android:text="@string/i_m_not_a_robot"
                android:textSize="20sp"
                />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/register_checkbox1_textView"
            android:layout_width="266dp"
            android:layout_height="76dp"
            android:layout_marginStart="16dp"
            android:textColorLink="@color/black"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/montserrat_medium"
            app:layout_constraintTop_toBottomOf="@id/signup_recaptchaText"
            app:layout_constraintStart_toEndOf="@id/register_checkbox1"
            app:layout_constraintEnd_toEndOf="parent"

            />

            <CheckBox
                android:id="@+id/register_checkbox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/register_checkbox1_textView"
                android:layout_marginStart="40dp"
                app:layout_constraintTop_toBottomOf="@+id/signup_recaptchaText"
                android:checked="false"
                />


         <CheckBox
            android:id="@+id/register_checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="40dp"
             android:layout_marginTop="28dp"
            android:buttonTint="@color/black"
             app:layout_constraintEnd_toStartOf="@+id/register_scroll"
            app:layout_constraintTop_toBottomOf="@+id/register_checkbox1"
            />

        <ScrollView
            android:id="@+id/register_scroll"
            android:layout_width="266dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toEndOf="@+id/register_checkbox2"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/register_checkbox1_textView"
            app:layout_constraintEnd_toEndOf="parent"
            >

            <TextView
                android:id="@+id/register_checkbox2_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/leti_im_bilgilerinizin_duyuru_yenilikler_reklam_promosyon_vb_ticari_elektronik_ileti_g_nderilmek_zere_i_lenmesi_ve_bu_ama_la_kullan_lmas_saklanmas_ve_ticari_elektronik_ileti_g_nderilmesi_ve_bu_g_nderimin_sa_lanmas_i_in_defactofit_in_hizmet_ald_nc_ki_ilerle_payla_mas_i_in_elektronik_ticari_leti_bilgilendirme_metnini_okudu_unuzu_ve_kabul_etti_inizi_onayl_yorsunuz"
                />

        </ScrollView>


        <Button
            android:id="@+id/signup_button"
            android:layout_width="102dp"
            android:layout_height="47dp"
            android:layout_marginStart="156dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="156dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/uye_ol"
            android:theme="@style/Button.White"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_checkbox2"
            app:layout_constraintStart_toStartOf="parent"

            tools:ignore="NotSibling" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

